package com.springboot.MyTodoList.botai;

public interface IntentEmbeddingService {
    float[] embed(String text);
}
